# talen-en-compilers

P0/: Main.hs
P1/: README.md  cabal.project  ical-calendar-spec.md  ical-datetime-spec.md  icalendar.cabal
P1/examples/: newyear.ics  rooster_infotc.ics
P1/src/: Calendar.hs  DateTime.hs  Features.hs
P1/test/: Main.hs
P2/: README.md  arrow-format.md  assignment-arrow.cabal  cabal.project  open-questions.md
P2/app/: Main.hs
P2/examples/: Simple.arrow
P2/src/: Algebra.hs  Interpreter.hs  Lexer.x  Model.hs  Parser.y
