cabal-version:       3.0

name:                assignment-icalendar

version:             0.1.0.0

author:              Talen & Compilers

build-type:          Simple

executable test
  main-is:            Main.hs
  hs-source-dirs:     test

  build-depends:      base,
                      assignment-icalendar
  default-language:   Haskell2010

library
  exposed-modules:      Calendar
                      , DateTime
                      , Features

  build-depends:       array,
                       base >=4.14,
                       containers,
                       uu-tc == 2024.1.1,
                       time

  hs-source-dirs:      src

  default-language:    Haskell2010
